# gtkrs4droid

./: Cargo.toml  README  meson.build
build-aux/android/: arpa.sp1rit.gtkrs4droid.xml
data/: gtkrs4droid.gresource.xml  meson.build
data/ui/: window.ui
src/: main.rs  meson.build  window.rs
subprojects/: gtk.wrap
